--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-9OKG105SQLEXPRESS;Database=db_empresa;User Id=sa;Password=Admin@123;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=DESKTOP-9OKG105\\SQLEXPRESS;Database=db_empresa;User Id=sa;Password=Admin@123;TrustServerCertificate=true;"
   }
 }
